crates/vize_atelier_vapor/tests/level_vapor_upstream_parity/snapshots/level_vapor_upstream_parity__dynamic_models__dynamic_component_model_computed_named.snap
---
source: crates/vize_atelier_vapor/tests/davinci_vapor_upstream_parity/dynamic_models.rs
expression: compiled.code
---
import { createDynamicComponent as _createDynamicComponent, child as _child, next as _next, txt as _txt, toDisplayString as _toDisplayString, setText as _setText, setInsertionState as _setInsertionState, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<main data-id=\"root\"><!----><i data-id=\"mirror\"> </i></main>", true)

export function render(_ctx) {
  const n1 = t0()
  const n2 = _child(n1)
  const n3 = _next(_child(n1))
  const x3 = _txt(n3)
  _setInsertionState(n1, n2)
  const n0 = _createDynamicComponent(() => (_ctx.view), {
    title: () => (_ctx.form[_ctx.field]),
    "onUpdate:title": () => ($event => ((_ctx.form[_ctx.field]) = $event)),
    titleModifiers: () => ({ "trim": true })
  }, null, false)
  _renderEffect(() => _setText(x3, _toDisplayString(_ctx.form[_ctx.field])))
  return n1
}
